Finish changing book to beer

--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <%= render 'layouts/sidebar', user: @user, book: @new_book %>
+    <%= render 'layouts/sidebar', user: @user, beer: @new_beer %>
     <div class="col-md-8 offset-md-1">
     <h2 class="mt-3">Following</h2>
 
