--- a/app/javascript/stylesheet/application.css
+++ b/app/javascript/stylesheet/application.css
@@ -1,7 +1,101 @@
+html{
+  height: 100%;
+}
 
+body {
+  height: 100%;
+}
 
+main .container:first-of-type{
+  margin-top: 70px;
+}
+
+nav.fixed-top{
+  background-color: #5c5c72;
+}
+
+.sign-page{
+  background-image: url("../images/beer.jpg");
+  background-position: center;
+  background-size: cover;
+}
 .table td {
   vertical-align: middle;
+}
+
+.carousel-caption{
+  bottom: 60px;
+}
+
+.carousel-caption h1{
+  font-size: 100px;
+  font-weight: bold;
+}
+
+.heading-1{
+  color: white;
+  width: 500px;
+  margin-right: auto;
+}
+
+.heading-2{
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.heading-3{
+  width: 500px;
+  margin-right: auto;
+}
+
+.caption-1{
+  width: 1000px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.caption-2{
+  width: 1000px;
+  margin-right: auto;
+  text-align: left;
+}
+
+.caption-3{
+  width: 1000px;
+  margin-left: auto;
+  text-align: right;
+}
+
+
+.carousel-caption .heading{
+  font-size: 80px;
+}
+
+
+.circle-image-1{
+  background-image: url('../../assets/images/libeery.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.circle-image-2{
+  background-image: url('../../assets/images/beer_friend.jpeg');
+  background-position: center;
+  background-size: cover;
+}
+
+.circle-image-3{
+  background-image: url('../images/beer.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+#card-size{
+  height: 450px;
+}
+
+.card-body{
+  padding-top: 0;
 }
 
 
