--- a/app/views/beers/edit.html.erb
+++ b/app/views/beers/edit.html.erb
@@ -1,18 +1,18 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 mx-auto">
-    <h2 class="mt-3">Editing Book</h2>
+    <h2 class="mt-3">Editing Beer</h2>
 
-    <% if @book.errors.any? %>
-      <%= @book.errors.count %>件のerrorが発生しました。
+    <% if @beer.errors.any? %>
+      <%= @beer.errors.count %>件のerrorが発生しました。
       <ul>
-        <% @book.errors.full_messages.each do |message| %>
+        <% @beer.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
     <% end %>
 
-    <%= form_with model: @book do |f| %>
+    <%= form_with model: @beer do |f| %>
       <div class="form-group">
         <%= f.label :title %><br>
         <%= f.text_field :title %>
@@ -22,13 +22,13 @@
         <%= f.text_field :body %>
       </div>
       <div class="form-group">
-        <%= f.submit "Update Book", class:"btn btn-info" %>
+        <%= f.submit "Update Beer", class:"btn btn-info" %>
       </div>
 
     <% end %>
 
-    <%= link_to "Show", book_path(@book) %> | 
-    <%= link_to "Back", books_path %>
+    <%= link_to "Show", beer_path(@beer) %> | 
+    <%= link_to "Back", beers_path %>
     </div>
   </div>
 </div>
