--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$(".favorite_btn_partial_<%= @book.id %>").html("<%= j(render 'layouts/favorite_btn', book: @book) %>");
+$(".favorite_btn_partial_<%= @beer.id %>").html("<%= j(render 'layouts/favorite_btn', beer: @beer) %>");
