--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,18 +1,124 @@
-<div class="container">
-  <div class="row">
-    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-      <h1>welcome to <strong><i class="fas fa-book"></i> Bookers!!</strong></h1>
-      <p>In <i class="fas fa-book"></i> Bookers,</p>
-      <p>you can share and exchange your opinions, inpressions, and emotions</p>
-      <p>about various books!</p>
-      <div class="btn-wrapper col-10 mx-auto">
-        <div class="row">
-          <%= link_to "Log in", new_user_session_path, class:"btn btn-info btn-sm btn-block mb-3"%>
-        </div>
-        <div class="row">
-          <%= link_to "Sign up", new_user_registration_path, class:"btn btn-success btn-sm btn-block"%>
+<div id="my-carousel" class="carousel slide mb-5" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#my-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#my-carousel" data-slide-to="1"></li>
+    <li data-target="#my-carousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag 'beer.jpg',style:"height: 500px; object-fit: cover; object-position: center;", class:"bd-placeholder-img bd-placeholder-img-lg d-block w-100" %>
+      <div class="container">
+        <div class="carousel-caption">
+          <h1 class="heading-1">BEER FOR MEMORY</h1>
+          <p class="caption-1">
+            Your relationship with others would be better<br>
+            by sharing your recommended beer.<br>
+            Drinking helps you live a lot more fun.
+          </p>
         </div>
       </div>
     </div>
+    <div class="carousel-item">
+      <%= image_tag 'beer2.jpg',style:"height: 500px; object-fit: cover; object-position: center;", class:"bd-placeholder-img bd-placeholder-img-lg d-block w-100"  %>
+      <div class="container">
+        <div class="carousel-caption">
+          <h1 class="heading-2">BEER FOR RELAXING</h1>
+          <p class="caption-2">
+            Your relationship with others would be better<br>
+            by sharing your recommended beer.<br>
+            Drinking helps you live a lot more fun.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'beer3.jpg',style:"height: 500px; object-fit: cover; object-position: center;", class:"bd-placeholder-img bd-placeholder-img-lg d-block w-100"  %>
+      <div class="container">
+        <div class="carousel-caption">
+          <h1 class="heading-3">BEER FOR MEMORY</h1>
+          <p class="caption-3">
+            Your relationship with others would be better<br>
+            by sharing your recommended beer.<br>
+            Drinking helps you live a lot more fun.
+          </p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#my-carousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#my-carousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<div class="container">
+  <div class="row mb-4">
+    <div class="card-deck w-100">
+      <div class="col-4">
+        <div class="card shadow" id="card-size">
+          <div class="w-100 h-50">
+            <div class="w-50 h-75 mx-auto mt-3 rounded-circle circle-image-1"></div>
+          </div>
+          <div class="card-body">
+            <p class="card-title text-center mb-2">
+              <strong>Share Your Favorites</strong>
+            </p>
+            <p class="card-text mt-1">
+              In Beerers, you can share your favorite beers with others.<br>
+              You can also explore other user's recommended breweries.<br>
+              This website helps you expand your drinking experiences,<br>
+              and be your own beer-library.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card shadow" id="card-size">
+          <div class="w-100 h-50">
+            <div class="w-50 h-75 mx-auto mt-3 rounded-circle circle-image-2"></div>
+          </div>
+          <div class="card-body">
+            <p class="card-title text-center mb-2">
+              <strong>Make Friend with Beer Funs</strong>
+            </p>
+            <p class="card-text mt-1">
+              In Beerers, you can share your favorite beers with others.<br>
+              You can also explore other user's recommended breweries.<br>
+              This website helps you expand your drinking experiences,<br>
+              and be your own beer-library.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card shadow" id="card-size">
+          <div class="w-100 h-50">
+            <div class="w-50 h-75 mx-auto mt-3 rounded-circle circle-image-3"></div>
+          </div>
+          <div class="card-body">
+            <p class="card-title text-center mb-2">
+              <strong>Discover New Beer</strong>
+            </p>
+            <p class="card-text mt-1">
+              In Beerers, you can share your favorite beers with others.<br>
+              You can also explore other user's recommended breweries.<br>
+              This website helps you expand your drinking experiences,<br>
+              and be your own beer-library.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <%= link_to "Log in", new_user_session_path, class:"btn btn-light btn-sm btn-block mb-3"%>
+  </div>
+  <div class="row">
+    <%= link_to "Sign up", new_user_registration_path, class:"btn btn-light btn-sm btn-block mb-5"%>
   </div>
 </div>
