--- a/app/views/layouts/_comment_form.html.erb
+++ b/app/views/layouts/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [book, comment], local: false do |f| %>
+<%= form_with model: [beer, comment], local: false do |f| %>
   <%= f.text_area :comment, rows:"5", cols:"70" %>
   <%= f.submit "送信", class:"btn btn-sm btn-success" %>
 <% end %>
