--- a/app/views/layouts/_comment_list.html.erb
+++ b/app/views/layouts/_comment_list.html.erb
@@ -7,13 +7,13 @@
     </tr>
   </thead>
   <tbody>
-    <% book.book_comments.each do |comment| %>
+    <% beer.beer_comments.each do |comment| %>
       <tr>
         <td><%= image_tag comment.user.get_profile_image(70,70) %><br><%= comment.user.name %></td>
         <td><%= comment.comment %></td>
         <td>
           <% if comment.user == current_user %>
-            <%= link_to "削除", book_book_comment_path(book.id, comment.id), method: :delete, class:"btn btn-sm btn-danger", remote: true %>
+            <%= link_to "削除", beer_beer_comment_path(beer.id, comment.id), method: :delete, class:"btn btn-sm btn-danger", remote: true %>
           <% end %>
         </td>
       </tr>
