--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -2,7 +2,7 @@
     <div class="ml-auto my-4 search-form">
       <%= form_with url: '/search', method: :get do |f| %>
         <%= f.text_field :word %>
-        <%= f.select :range, options_for_select([['User'], ['Book']]) %>
+        <%= f.select :range, options_for_select([['User'], ['Beer']]) %>
         <%= f.select :search, options_for_select([["完全一致",'perfect_match'], ["前方一致",'forward_match'], ["後方一致",'backward_match'], ["部分一致",'partial_match']])%>
         <%= f.submit '検索', class:"btn btn-sm btn-primary" %>
       <% end %>
