--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -30,18 +30,18 @@
 <% end %>
 </div>
 
-<h2 class="mt-3">New book</h2>
+<h2 class="mt-3">New beer</h2>
 
-<% if @new_book.errors.any? %>
-  <%= @new_book.errors.count %>件 errorが発生しました。
+<% if @new_beer.errors.any? %>
+  <%= @new_beer.errors.count %>件 errorが発生しました。
   <ul>
-    <% @new_book.errors.full_messages.each do |message| %>
+    <% @new_beer.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
   </ul>
 <% end %>
 
-<%= form_with model: book do |f| %>
+<%= form_with model: beer do |f| %>
   <div class="form-group">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
@@ -55,7 +55,7 @@
     <%= f.file_field :image, accept: '*/image' %>
   </div>
   <div class="form-group">
-    <%= f.submit "Create Book", class:"btn btn-info" %>
+    <%= f.submit "Create Beer", class:"btn btn-info" %>
   </div>
 
 <% end %>
