--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,57 +1,52 @@
 <div class="container">
   <div class="row">
-    <%= render 'layouts/sidebar', user: current_user, book: @new_book %>
-
-    <% if @range == "Book" %>
+    <%= render 'layouts/sidebar', user: current_user, beer: @new_beer %>
+    <% if @range == "Beer" %>
       <div class="col-md-8 offset-md-1">
-        <h2 class="mt-3">Books</h2>
-
-        <% @books.each do |book| %>
+        <h2 class="mt-3">Beers</h2>
+        <% @beers.each do |beer| %>
           <div class="card w-50 mx-auto mt-4 shadow-lg">
-            <%= link_to user_path(book.user) do %>
-              <%= image_tag book.user.get_profile_image(50,50), class:"card-img-top" %>
+            <%= link_to user_path(beer.user) do %>
+              <%= image_tag beer.user.get_profile_image(50,50), class:"card-img-top" %>
             <% end %>
             <div class="card-body">
               <div class="row">
+                <div class="col-2"></div>
+                <div class="col-10">
+                  <p class="card-title">
+                  </p>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <span><%= link_to beer.title, beer_path(beer) %></span>
+          <span><%= beer.body %></span>
+          <span class="favorite_btn_partial_<%= beer.id %>"><%= render 'layouts/favorite_btn', beer: beer %></span>
+        </tr>
+      <% end %>
+    </div>
+  <% elsif @range == "User" %>
+    <div class="col-md-8 offset-md-1">
+      <h2 class="mt-3">Users</h2>
+      <% @users.each do |user| %>
+        <div class="card w-50 mx-auto mt-4 shadow-lg">
+          <%= link_to user_path(user) do %>
+            <%= image_tag user.get_profile_image(50,50), class:"card-img-top" %>
+          <% end %>
+          <div class="card-body">
+            <div class="row">
               <div class="col-2"></div>
               <div class="col-10">
-              <p class="card-title">
-              </p>
-              <p class="card-text"></p>
+                <p class="card-title">
+                </p>
+                <p class="card-text"></p>
               </div>
-            </div></div>
+            </div>
           </div>
-
-
-            <span><%= link_to book.title, book_path(book) %></span>
-            <span><%= book.body %></span>
-            <span class="favorite_btn_partial_<%= book.id %>"><%= render 'layouts/favorite_btn', book: book %></span>
-          </tr>
-        <% end %>
-
-      </div>
-    <% elsif @range == "User" %>
-      <div class="col-md-8 offset-md-1">
-        <h2 class="mt-3">Users</h2>
-
-        <% @users.each do |user| %>
-          <div class="card w-50 mx-auto mt-4 shadow-lg">
-            <%= link_to user_path(user) do %>
-              <%= image_tag user.get_profile_image(50,50), class:"card-img-top" %>
-            <% end %>
-            <div class="card-body">
-              <div class="row">
-              <div class="col-2"></div>
-              <div class="col-10">
-              <p class="card-title">
-              </p>
-              <p class="card-text"></p>
-              </div>
-            </div></div>
-          </div>
-        <% end %>
-
-      </div>
-    <% end %>
-  </div>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
 </div>
