--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,7 +30,7 @@
 
     <% end %>
     <%= link_to "Show", user_path(@user) %> | 
-    <%= link_to "Back", books_path %>
+    <%= link_to "Back", beers_path %>
     </div>
   </div>
 </div>
