--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,21 @@
-<div class="container">
-  <div class="row">
-    <div class="mx-auto">
-      <p>Copyright ©️ TaishuMentor All Rights Reserved.</p>
+<footer>
+  <div class="container pt-5">
+    <div class="row p-2 mb-4 justify-content-between align-items-center">
+      <div class="col-md-4">
+        <%= image_tag 'logo2.png' %>
+      </div>
+      <div class="col-md-4 d-flex align-items-center justify-content-center">
+        <ul>
+          <li><a href="#main-navbar"><i class="bi bi-chat-dots"></i>お問い合わせ</a></li>
+          <li><a href="#main-navbar"><i class="bi bi-check-square"></i>プライバシーポリシー</a></li>
+          <li><a href="#main-navbar"><i class="bi bi-shield-check"></i>利用規約</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="mx-auto">
+        <p>Copyright ©️ TaishuMentor All Rights Reserved.</p>
+      </div>
     </div>
   </div>
-</div>
+</footer>
