--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,57 +1,49 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top">
-  <div class="container">
+<nav id="main-navbar" class="navbar navbar-light navbar-expand-lg sticky-top p-0">
+  <div class="container-fluid justify-content-around">
     <a href="/" class="navbar-brand">
-      <%= image_tag "logo.png", size:"122x45" %>
+      <%= image_tag 'logo.png', height:"65" %>
     </a>
-    <button class="navbar-toggler">
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#expand-me" aria-label="toggle button">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ml-auto">
+    <div id="expand-me" class="collapse navbar-collapse">
+      <div class="navbar-nav ml-auto">
         <% if user_signed_in? %>
-          <li>
-            <%= link_to user_path(current_user), class:"nav-link text-light" do %>
-              <i class="fas fa-home"></i> Home
-            <% end %>
-          </li>
-          <li>
-            <%= link_to users_path, class:"nav-link text-light" do %>
-              <i class="fas fa-users"></i> Users
-            <% end %>
-          </li>
-          <li>
-            <%= link_to beers_path, class:"nav-link text-light" do %>
-              <i class="fas fa-beer"></i> Beers
-            <% end %>
-          </li>
-          <li>
-            <%= link_to destroy_user_session_path, method: :delete, class:"nav-link text-light" do %>
-              <i class="fas fa-sign-out-alt"></i> Log out
-            <% end %>
-          </li>
+          <%= link_to user_path(current_user), class:"nav-link" do %>
+            <i class="bi bi-house-door"></i><br>
+            <span>HOME</span>
+          <% end %>
+          <%= link_to users_path, class:"nav-link" do %>
+            <i class="bi bi-people"></i><br>
+            <span>USERS</span>
+          <% end %>
+          <%= link_to beers_path, class:"nav-link" do %>
+            <i class="fas fa-beer"></i><br>
+            <span>BEERS</span>
+          <% end %>
+          <%= link_to destroy_user_session_path, method: :delete, class:"nav-link" do %>
+            <i class="bi bi-door-open"></i><br>
+            <span>LOG OUT</span>
+          <% end %>
         <% else %>
-          <li>
-            <%= link_to root_path, class:"nav-link text-light" do %>
-              <i class="fas fa-home"></i> Home
-            <% end %>
-          </li>
-          <li>
-            <%= link_to about_path, class:"nav-link text-light" do %>
-              <i class="fas fa-link"></i> About
-            <% end %>
-          </li>
-          <li>
-            <%= link_to new_user_registration_path(current_user), class:"nav-link text-light" do %>
-              <i class="fas fa-user-plus"></i> Sign up
-            <% end %>
-          </li>
-          <li>
-            <%= link_to new_user_session_path(current_user), class:"nav-link text-light" do %>
-              <i class="fas fa-sign-in-alt"></i> Log in
-            <% end %>
-          </li>
+          <%= link_to root_path, class:"nav-link" do %>
+            <i class="bi bi-house-door"></i><br>
+            <span>HOME</span>
+          <% end %>
+          <%= link_to about_path, class:"nav-link" do %>
+            <i class="bi bi-link-45deg"></i><br>
+            <span>ABOUT</span>
+          <% end %>
+          <%= link_to new_user_registration_path(current_user), class:"nav-link" do %>
+            <i class="bi bi-person-plus"></i><br>
+            <span>SIGN UP</span>
+          <% end %>
+          <%= link_to new_user_session_path(current_user), class:"nav-link" do %>
+            <i class="bi bi-door-open"></i><br>
+            <span>LOG IN</span>
+          <% end %>
         <% end %>
-      </ul>
+      </div>
     </div>
   </div>
 </nav>
-<div id="notice" class="mb-0"><%= flash[:notice] %></div>
