--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,36 +1,35 @@
 <div class="col-md-3 mt-3">
-<h2>User info</h2>
+  <div class="row justify-content-center text-center">
+      <h3>Profile</h3>
+
+    <table class="table mt-2">
+      <tr><td colspan="2"><%= image_tag user.get_profile_image(100,100) %></td></tr>
+      <tr>
+        <td><%= user.name %></td>
+      </tr>
+      <tr>
+        <td><%= user.introduction %></td>
+      </tr>
+      <tr>
+        <td>
+          <%= link_to followers_user_relationships_path(user.id) do %>
+            <i class="bi bi-person-heart"></i>フォロワー <%= user.followers.count %>
+          <% end %>
+        </td>
+      </tr>
+    </table>
+  </div>
+
+  <%= render 'layouts/follow_btn', user: user%>
+
+  <div class="row">
+  <%= link_to edit_user_path(user), class:"btn btn-outline-secondary btn-block" do %>
+    <i class="fas fa-user-cog"></i>
+  <% end %>
+  </div>
 
 
-<table class="table mt-2">
-  <tr><td colspan="2"><%= image_tag user.get_profile_image(100,100) %></td></tr>
-  <tr>
-    <th>name</th>
-    <td><%= user.name %></td>
-  </tr>
-  <tr>
-    <th>introduction</th>
-    <td><%= user.introduction %></td>
-  </tr>
-  <tr>
-    <th>フォロー数</th>
-    <td><%= link_to user.followings.count, followings_user_relationships_path(user.id) %></td>
-  </tr>
-  <tr>
-    <th>フォロワー数</th>
-    <td><%= link_to user.followers.count, followers_user_relationships_path(user.id) %></td>
-  </tr>
-</table>
-
-<%= render 'layouts/follow_btn', user: user%>
-
-<div class="row">
-<%= link_to edit_user_path(user), class:"btn btn-outline-secondary btn-block" do %>
-  <i class="fas fa-user-cog"></i>
-<% end %>
-</div>
-
-<h2 class="mt-3">New beer</h2>
+<h3 class="mt-3">New beer</h3>
 
 <% if @new_beer.errors.any? %>
   <%= @new_beer.errors.count %>件 errorが発生しました。
