--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,13 @@
                 <%= image_tag user.get_profile_image(182,182), class:"bd-placeholder-img card-img-top", style:"width: 100%; height: 200px;" %>
               <% end %>
               <div class="card-body">
+                <% if user == current_user %>
+                  <div class="row justify-content-end">
+                    <div>
+                      <i class="bi bi-check-square-fill"></i>
+                    </div>
+                  </div>
+                <% end %>
                 <p class="card-title">
                   <strong>Name: <%= user.name %></strong>
                 </p>
