--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,32 +2,39 @@
   <div class="row">
     <%= render 'layouts/sidebar', user: @user, beer: @new_beer %>
     <div class="col-md-8 offset-md-1">
-      <div class=row">
-        <h2 class="my-4"><%= @user.name %>'s beers</h2>
+      <div class="row">
+        <% if @user == current_user %>
+          <h2 class="my-4">Your Favorite Beers</h2>
+        <% else %>
+          <h2 class="my-4"><%= @user.name %>'s Beers</h2>
+        <% end %>
         <%= render 'layouts/search' %>
       </div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
-          </tr>
-        </thead>
-        <tbody>
+      <div class="row">
+        <div class="card-deck w-100">
           <% @user.beers.each do |beer| %>
-            <tr>
-              <td>
-                <%= link_to user_path(beer.user) do %>
-                  <%= image_tag beer.user.get_profile_image(80,80) %>
+            <div class="col-4 mb-5">
+              <div class="card shadow h-100">
+                <%= link_to beer_path(beer), class:"mx-auto w-75 h-50 p-2" do %>
+                  <%= image_tag beer.image, class:"bd-placeholder-img card-img-top", style:"object-position: center; object-fit:cover; width: 100%; height: 100%;" %>
                 <% end %>
-              </td>
-              <td><%= link_to beer.title, beer_path(beer) %></td>
-              <td><%= beer.body %></td>
-            </tr>
+                <div class="card-body">
+                  <p class="card-title text-center">
+                    <strong><%= beer.title %></strong>
+                  </p>
+                  <p class="card-text">
+                    <%= beer.body %>
+                  </p>
+                  <p class="favorite_btn_partial_<%= beer.id %>"><%= render 'layouts/favorite_btn', beer: beer %></p>
+                </div>
+              </div>
+            </div>
           <% end %>
-        </tbody>
-      </table>
+        </div>
+      </div>
+      <div class="row my-5">
+        <%= paginate @user.beers.page(params[:page]) %>
+      </div>
     </div>
   </div>
 </div>
